The finalest before opposition naming

--- a/0_frontmatter/abstract.tex
+++ b/0_frontmatter/abstract.tex
@@ -3,21 +3,27 @@
 
 
 \begin{abstractslong}    
-Neurosymbolic artificial intelligence comprises a set of design methods for the integration of analogous artificial intelligence models (symbolic and subsymbolic), such that the benefits of both models are combined under a unified framework. For this purpose, multiple neurosymbolic design proposals have been proposed throughout the years. However, these approaches do not address contextual and technical aspects, and do not provide clear guidelines on \textit{how} or \textit{when} neurosymbolic integration is required.
+Neurosymbolic artificial intelligence comprises a set of approaches for the integration of artificial intelligence models (symbolic and subsymbolic), such that the benefits of both models are combined under a unified approach. For this purpose, multiple neurosymbolic design techniques have been proposed throughout the years. However, these approaches do not address contextual and practical aspects, and do not provide clear guidelines on \textit{how} or \textit{when} neurosymbolic integration is required.
 
-This thesis aims to provide a general design method for neurosymbolic systems, focusing on the integration of knowledge-based systems (symbolic) and deep learning (subsymbolic). The proposed design method extends the previously considered aspects of neurosymbolic integration (limitations and benefits) by including technical and contextual aspects (restrictions and considerations). For each potential interaction between knowledge-based systems and deep learning, a specific interaction design method is formulated where the specific parameters per integration are outlined. Instantiations on the different interaction design methods are provided to assess the viability and applicability of the proposal. This thesis presents the following main contributions:
-\begin{itemize}
-    \item A general design method for the integration of knowledge-based systems and deep learning models.
-    \item A specific design method for each potential interaction between knowledge-based systems and deep learning models. 
-    \item A set of research resources obtained as a result of the instantiation of each integration design method, namely: a semantic-based initialization method for knowledge graph embedding models, a case-based reasoning model powered by deep learning for the generation of medical reports, a multi-agent system for the extraction of behavioral user patterns from opaque personalization systems, and an explainability framework for knowledge graph embedding predictions.
-\end{itemize}
-The versatility and applicability of the proposed design method is validated through its instantiation across several application scenarios. Instantiations based on the proposed design method provide feasible solutions for several open research challenges, thus contributing to advancing the state-of-the-art in those areas.
+This thesis aims to provide a general design method for neurosymbolic systems, focusing on the integration of knowledge-based systems (symbolic) and deep learning models (subsymbolic). The proposed design method extends the previously considered aspects of neurosymbolic integration (limitations and benefits) by including practical and contextual aspects (restrictions and considerations). For each potential interaction between knowledge-based systems and deep learning, a specific integration design method is formulated outlining its individual parameters. Instantiations on the different integration design methods are provided to assess the viability and applicability of the proposal. 
+
+The contributions presented in this thesis can be summarized as follows. First, a general design method for the integration of knowledge-based systems and deep learning models is proposed. From this general design method, a specific method for each potential interaction between knowledge-based systems and deep learning models is formulated. Each integration design method is instantiated on different application scenarios, generating the following research resources: a semantic-based initialization method for knowledge graph embedding models, a case-based reasoning model powered by deep learning for the generation of medical reports, a multi-agent system for the extraction of behavioral user patterns from opaque personalization systems, and an explainability framework for knowledge graph embedding predictions.
+
+The versatility and applicability of the proposed general design method is validated through its instantiation across several application scenarios, providing feasible solutions for several open research challenges, thus contributing to advancing the state-of-the-art in those areas.
+
+%%AÑADIR RESULTADOS POSITIVOS DE INSTANCIACIONES
 \end{abstractslong}
 
 \cleardoublepage
 \begin{abstractslongSpanish}
+La inteligencia artificial neurosimbólica comprende una serie de técnicas destinadas a la integración de paradigmas de inteligencia artificial (simbólicos y subsimbólicos) bajo un marco común integrando los beneficios de ambos. Múltiples técnicas de diseño para modelos neurosimbólicos han sido propuestas a lo largo del tiempo con el fin de lograr este objetivo. Sin embargo, estas propuestas no consideran aspectos prácticos y contextuales, fallando en proponer indicaciones acerca de \textit{cómo} o \textit{cuándo} un sistema neurosimbólico es necesario. 
 
+Esta tesis presenta un método general de diseño para sistemas neurosimbólicos, enfocándose en la integración de sistemas basados en el conocimiento (de carácter simbólico) y modelos de aprendizaje profundo (de carácter subsimbólico). El método de diseño propuesto comprende los aspectos previamente explorados de la integración neurosimbólica (limitaciones y beneficios), incorporando además aspectos prácticos y contextuales (restricciones y consideraciones). Por cada posible integración entre sistemas basados en el conocimiento y modelos de aprendizaje profundo, un método de diseño específico es formulado indicando sus parámetros propios. Instanciaciones de cada uno de los métodos de diseño por integración son presentados para evaluar la viabilidad y la aplicabilidad de la propuesta.
 
+Las contribuciones de esta tesis pueden resumirse de la siguiente forma. Primero, un método general de diseño para la integración de sistemas basados en el conocim-
+iento y modelos de aprendizaje profundo es propuesto. A partir de este método general de diseño, se formula un método específico para cada posible interacción entre sistemas basados en el conocimiento y modelos de aprendizaje profundo. El método de diseño de cada integración es instanciado en diferentes casos de uso, generando los siguientes recursos: un método de inicialización basado en semática para modelos de razonamiento sobre grafos de conocimiento, un sistema de razonamiento basado en casos que integra modelos de aprendizaje profundo para la generación de informes médicos, un sistema multiagente para la extracción de patrones de comportamiento de sistemas opacos de personalización, y una herramienta para la explicabilidad de predicciones generadas por modelos de razonamiento sobre grafos de conocimiento.
+
+La versatilidad y la aplicabilidad del método de diseño propuesto es validado mediante su instanciación en los diferentes casos de uso, donde se presentan soluciones válidas a problemas pertenecientes a distintas áreas, contribuyendo consecuentemente a mejorar el estado de la técnica en dichas áreas.
 
 
 \end{abstractslongSpanish}
