--- a/0_frontmatter/acknowledgement.tex
+++ b/0_frontmatter/acknowledgement.tex
@@ -5,46 +5,45 @@
 %\begin{acknowledgements}      %this creates the heading for the acknowlegments
 %
 %%
-%Según la Real Academia Española, serendipia es \textit{la circunstancia de encontrar por casualidad algo que no se buscaba}. Esta tesis es un resultado de la serendipia, de una suerte que me encontró cuando menos me lo esperaba, y quizás cuando más la necesitaba. Cuando Emilio me ofreció unirme al Ontology Engineering Group como parte de un pequeño proyecto, lo último que esperaba es que tras ese pequeño proyecto se escondía la mayor aventura de mi vida, tanto a nivel profesional como personal. Y, como en toda buena aventura, no hubiera podido llegar al final sin la ayuda de tantísimas personas que han estado a mi lado.
+Según el diccionario, \textit{serendipia} es \textit{la circunstancia de encontrar por casualidad algo que no se buscaba}. Esta tesis es un resultado de la serendipia, de una suerte que me encontró cuando menos me lo esperaba y, seguramente, cuando más la necesitaba. Cuando Emilio me ofreció unirme al Ontology Engineering Group, lo último que podía imaginar es que detrás de un inocente email se escondía la mayor aventura de mi vida, tanto a nivel profesional como personal. Y, como en toda buena aventura, no hubiera podido llegar al final sin la ayuda de tantísimas personas que han estado acompañándome. 
 
-%El mayor de mis agradecimientos es sin duda para mis directores: Emilio y Daniel. Si ya fue un privilegio teneros como profesores, teneros como directores ha sido un verdadero regalo. Gracias por haberme llevado bajo vuestro ala, por guiarme siempre con tanto cariño en este largo (y a veces tortuoso) camino que es la investigación y por haberme enseñado tantísimo. 
+El más grande de mis agradecimientos es sin duda para mis directores: Emilio y Daniel. Si ya fue una suerte teneros como profesores, poder teneros como directores ha sido un verdadero regalo. Gracias por haberme llevado bajo vuestro ala, por guiarme siempre con tanto cariño en este increíble (aunque a veces difícil) camino que es la investigación, y por haberme enseñado tantísimo. Simplemente y de corazón: muchísimas gracias.
 
-%Gracias por supuesto a mis compañeros del Ontology Engineering Group, por acogerme con los brazos abiertos y darme un segundo hogar. A los postdocs, por regalarme tantos buenos consejos: Asun, Óscar, Raúl García, Elena, Víctor, Mariano Rico, Javi Bajo, Mariano Fernández y Edna. Muy especialmente, gracias a María Poveda. Parece increíble que unos zapatos tan pequeños puedan dejar unas huellas tan grandes allá por donde pasas. Qué afortunada soy y qué afortunados los y las que vengan de tener en ti un referente. Ojalá la suerte me deje seguir aprendiendo de ti (y contigo, sobretodo contigo) mucho tiempo. Muchas gracias también a Dani Garijo, que llegó tarde pero a tiempo. Gracias por tus incisivas preguntas, esas que agitan el avispero y te hacen ver las cosas desde una perspectiva completamente distinta, y por ofrecerme siempre tu inestimable ayuda.  Gracias también a los héroes en la sombra que hacen que todo funcione: Raúl Alcázar, Miguel Ángel, Ana Ibarrola, JARG y Paco. 
-
-
-%Gracias también a mis compañeros a los que tuve la suerte de ver cruzar el puente y convertirse en doctores: Julia, Álvaro, Andrea, Alba, Paola, María Navas, David, y Carlos. Gracias sobretodo a Pablo, por aguantar mi incesante verborrea y compartir conmigo tanto de tu tiempo, tus buenos consejos y, especialmente, tu gran sentido del humor. Gracias a mis compañeros predocs, con los que tanto tiempo he compartido en el  laboratorio (y a veces fuera de él): Serge, Ana, Iker, Juan Cano, Julián e Isam. Especialmente, gracias a Patri, por ser mi compañera en este increíble viaje.  
+Gracias por supuesto a mis compañeros del Ontology Engineering Group, por acogerme con los brazos abiertos y darme un segundo hogar al que ir cada día cuando salgo del mío. A los posdocs, por su ayuda y buenos consejos: Asun, Óscar, Raúl García, Elena, Víctor, Mariano Rico, Javi Bajo, Mariano Fernández y Edna. Muy especialmente, gracias a María Poveda. Parece increíble que unos zapatos tan pequeños puedan dejar una huella tan grande allá por donde pasas. Qué afortunada soy y qué afortunados quienes que vengan de tener en ti un referente y un ejemplo de lo que significa ser buena investigadora, buena docente y, especialmente, buena compañera. Ojalá la suerte me deje seguir aprendiendo de ti (y contigo, sobre todo contigo) mucho tiempo. Muchas gracias también a Dani, que llegó tarde pero justo a tiempo. Gracias por tus incisivas preguntas, esas que te hacen ver las cosas desde una perspectiva completamente distinta, y por regalarme siempre tu ayuda y tu tiempo tan desin(té)resadamente. Gracias también a esos héroes en la sombra que hacen que todo funcione: Raúl Alcázar, Miguel Ángel, Ana Ibarrola, J.A.R.G, Jhon, Laura y Paco. 
 
 
+Gracias también a mis compañeros (y amigos), de los que tanto he aprendido y a los que tuve la suerte de ver convertirse en doctores: Julia, Álvaro, Andrea, Alba, Paola, María Navas, David Chaves, y Carlos. Soy afortunada de haber podido compartir estos años con vosotros. Os admiro mucho. Gracias especialmente a Pablo, por aguantar mi incesante verborrea, ayudarme a levantarme en cada caída, y por compartir conmigo tus buenos consejos y tu gran sentido del humor. Gracias a mis compañeros predocs, con los que tantos buenos momentos he compartido dentro y fuera del laboratorio: Serge, Ana, Iker, Salva, Juan Cano, Esteban, Julián e Isam. Especialmente, gracias a Patri, por ser mi compañera en este viaje y ayudarme siempre a ver las cosas con una luz distinta.
 
 
-%%HAY QUE AGRADECER  AL GRUPO DE FRANK, SOBRETODO A PETER
-%%A SARA Y A LA GENTE DE ÁMSTERDAM
-%Sara, gracias por tu generosidad, y por haber sido mi hogar lejos de casa. 
-
-%Gracias también a mis amigos: los que estaban, los que volvieron, y los que se quedaron. Sin vuestro apoyo, especialmente en esta última etapa, nada de esto hubiera sido posible. Hay un trocito de vosotros en cada una de estas páginas. Quisiera destacar la ayuda de Jaime, que lleva más de una década ayudándome a desentrañar los intrincados misterios de la ciencia, convirtiendo cualquier problema complejo en sencillos garabatos. Muchas gracias también a Isma, que lleva acompañándome en este periplo de la universidad (y de la vida) desde el primer día que llegué aquí. Gracias por hacerme reír siempre con tus historias, por tu compañía en las buenas y tu apoyo incondicional en las malas y, sobretodo, por ser la maravillosa persona que eres.
-
-%Finalmente, y muy especialmente, gracias a Tamara por ser la hermana que la vida me regaló. Gracias por ser como eres, por estar de forma incondicional, por tu infinita generosidad y por darme una segunda familia y unos amigos increíbles. Gracias por tirar de mí cuando las fuerzas me faltan, pero también por tirarme de las orejas cuando hace falta. Me has dado tanto que una vida va a ser corta para agradecértelo. 
+I also wanted to thank the people back at the KRR in Amsterdam, for making me feel so welcomed. The fact that you could create such feeling of closeness in the midst of a pandemic with a 1.5m security distance rule in place says a lot about the kind of amazing you all are. Special thanks to Peter Bloem, for giving me the chance to make my research stay there. Getting to work with you and the rest of the group was an incredible and enriching experience, both personally and professionally. I also wanted to make a special mention to the reviewers, Ernesto and Alessandro, who kindly revised this thesis and provided valuable insights and comments that have helped to improve the final result. Finally, I wanted to thank all of my friends back in Amsterdam. I will forever cherish the memories we made, and I hope we will be able to make some more. Special thanks to Sara, my Spanish sidekick. Nunca podré agradecerte suficiente tu apoyo y tu compañía durante mi tiempo allí. Gracias por haber sido casa.
 
 
-%Gracias a mi familia, a toda ella: a los Amadores, a los Domínguez y a los Torrijos. Especialmente, gracias a mi prima Irene, por abrirme las puertas de este mundo y por ser un referente para mí tanto en lo profesional como en lo personal. No hubiera podido andar mi camino sin seguir tus pasos. Por supuesto, gracias a mi tío (y lo más importante, padrino) Juan y a mi tía Mariu, por cuidarme, mimarme y animarme siempre. También a mis hermanos, Javi y Jorge, por hacerme reír siempre en los momentos fáciles y, sobretodo, en los difíciles. Da igual cuánto crezcáis, siempre vais a ser mis pequeños. 
 
-%Sobretodo quiero darle las gracias las dos mujeres que me han hecho la persona que soy, de las que tanto he aprendido, y de las que seguiré aprendiendo toda la vida. En primer lugar, gracias a mi abuela, a mi Geni, por cuidarme tantos años y por apoyarme siempre incondicionalmente, aún sin saber exactamente en qué. De ti aprendí lo importante que es la generosidad, y que el amor que das a la gente, siempre lo recibes de vuelta. 
+Por supuesto, gracias también a mis amigos: a los que estaban, a los que volvieron, y a los que se quedaron. Sin vuestro apoyo en lo personal y en lo académico, especialmente en esta última etapa, nada de esto hubiera sido posible. Hay un pedacito de vosotros en cada una de estas páginas. Quisiera destacar la ayuda de Jaime, que con infinita paciencia lleva una vida ayudándome a desentrañar los intrincados misterios de la ciencia. Siempre tendrás mi gratitud y mi admiración. Gracias también a Marta y a Sandra, por sus ánimos incesantes, su cariño y por hacerme la vida un poquito más alegre. Gracias a Quique, Sergiy y Alberto, por aparecer en el momento preciso y haber compartido conmigo tantos buenos ratos dentro y fuera de esta escuela. Por supuesto, gracias a Isma, que lleva acompañándome en este periplo de la universidad (y de la vida) desde el primer día que llegué aquí. Gracias por hacerme reír a carcajadas, por tus mil historias, por tu compañía en las buenas y, sobre todo, por tu apoyo incondicional en las malas.
 
-%Especialmente gracias a mi madre, Geles. Gracias por enseñarme que el humor a veces es lo único que nos ayuda a enfrentarnos a la vida y por seguir (y sacarnos) siempre adelante, por difícil que sea. Siempre dices que tener un hijo significa llevarte cien disgustos por cada orgullo que recibes. Espero que este orgullo compense todos los disgustos que te haya dado (y los que seguro te seguiré dando). 
+Finalmente, y muy especialmente, gracias a Tamara por ser la hermana que la vida me regaló. Gracias por tirar de mí cuando las fuerzas me faltan, y por tirarme de las orejas cuando ha hecho falta. Gracias por ser, por estar de forma incondicional, por tu infinita generosidad, y por darme una segunda familia y unos amigos maravillosos. Me has dado tanto que una sola vida va a ser corta para agradecértelo. Gracias también a Raúl, Cris y Jesús por tratarme siempre como si fuera vuestra hija (y hermana) adoptiva. Esta alegría y todas las que vengan también son vuestras.  
 
-%Por último, gracias a mi estrella, cuya presencia y ausencia siempre me acompañan. A mi padre, Alberto, que además de dejarme su nariz y su amor por la música me enseñó que relativizar los problemas es el primer paso para resolverlos, y que la vida es un viaje que hay que disfrutar. Qué largo es el camino sin ti, y cuánto me hubiera gustado poder seguir caminándolo contigo cerca. Como a veces me cantabas: ``toda una vida me estaría contigo, no me importa en qué forma, ni dónde ni cómo; pero junto a ti''. Allí donde me estés esperando, ojalá estés orgulloso. 
+Gracias a mi familia, a toda ella: a los Amador, a los Domínguez y a los Torrijos. Gracias por acompañarme en cada paso del camino, desde antes incluso de que pudiera andarlo. Gracias tambien mis ``titas'', Elena y Esther, por todas las palabras de aliento y el cariño que me han dado siempre. Especialmente, gracias a mi prima Irene, por abrirme las puertas de este maravilloso mundo que es la informática, y por ser un referente para mí tanto en lo profesional como en lo personal. No hubiera llegado hasta aquí sin seguir tus pasos. Gracias a mi tito (y lo más importante, padrino) Juan y a mi tita Mariu, por cuidarme, mimarme y animarme siempre. También a mis hermanos, Javi y Jorge, por hacerme reír siempre en los momentos fáciles y, especialmente, en los difíciles cuando más falta me ha hecho.
 
-%Me gustaría añadir los versos de la canción de Xoel López "Lodo", porque la he escuchado durante el proceso de escritura bastante y es como un buen recordatorio de que esto es el final del camino y de que es una etapa que abre las puertas de algo nuevo y bonito
-% 
-%\begin{flushright}
-%\textit{"Y quizá hayas andado el camino ya \newline
-%Cuando mires atrás \newline
-%Si estás atrapado en las sombras \newline
-%Aguarda, aguarda \newline
-%Del lodo crecen las flores \newline
-%Más altas, más altas." \newline
-%-Xoel López}
-%\end{flushright}
+%Da igual lo grande que sea la diferencia de altura y los años que pasen, para mí siempre seréis mis pequeños.
+
+Sobre todo quiero darle las gracias a las dos mujeres que me han hecho la persona que soy, de las que tanto he aprendido, y de las que seguiré aprendiendo toda la vida. En primer lugar, gracias a mi abuela, a mi Geni, por cuidarme tantos años y por apoyarme siempre incondicionalmente, aún sin saber exactamente en qué. De ti aprendí lo importante que es la generosidad, y que el amor que das a la gente, siempre lo recibes de vuelta. 
+
+Por supuesto, gracias a mi madre: Geles. Gracias por enseñarme que el humor a veces es lo único que nos ayuda a enfrentarnos a la vida, y por haber tirado (de ti y de nosotros) siempre hacia delante por difícil que fuera. Siempre dices que tener un hijo significa llevarte cien disgustos por cada alegría que recibes. Espero que esta alegría compense todos los disgustos que te haya dado (y también los que vengan).  
+
+Por último, gracias a mi estrella, cuya presencia y ausencia siempre están conmigo. A mi padre, Alberto, que además de dejarme su nariz y su amor por la música me enseñó que relativizar los problemas es el primer paso para afrontarlos, y que al final lo único que te llevas de la vida es lo que la hayas disfrutado. Cuánto me quedó por aprender de ti. Como a veces cantabas: ``toda una vida me estaría contigo, no me importa en qué forma, ni dónde ni cómo; pero junto a ti''. Allí donde me estés esperando, ojalá estés orgulloso. 
+
+% Me gustaría añadir los versos de la canción de Xoel López "Lodo", porque la he escuchado durante el proceso de escritura bastante y es como un buen recordatorio de que esto es el final del camino y de que es una etapa que abre las puertas de algo nuevo y bonito
+
+% \begin{flushright}
+% \textit{"Y quizá hayas andado el camino ya \newline
+% Cuando mires atrás. \newline
+% Si estás atrapado en las sombras \newline
+% Aguarda, aguarda \newline
+% Del lodo crecen las flores \newline
+% Más altas, más altas." \newline
+% - ``Lodo", Xoel López}
+% \end{flushright}
 \end{acknowledgementslong}
 
 % ------------------------------------------------------------------------
