--- a/0_frontmatter/glossary.tex
+++ b/0_frontmatter/glossary.tex
@@ -20,12 +20,14 @@
 \item[KG]{Knowledge Graph}
 \item[KGC]{Knowledge Graph Completion}
 \item[KGE]{Knowledge Graph Embedding(s)}
+\item[K-NN]{K Nearest Neighbours}
 \item[MAS]{Multi-Agent System}
 \item[MRR]{Mean Reciprocal Rank}
 \item[NER]{Named Entity Recognition}
 \item[NLP]{Natural Language Processing}
 \item[OOKB]{Out-of-Knowledge-Base}
 \item[TF-IDF]{Term Frequency-Inverse Document Frequency}
+\item[TPU]{Tensor Processing Unit}
 \item[UVID]{User Virtual Identity}
 \item[XAI]{Explainable Artificial Intelligence}
 
