--- a/2_stateoftheart/stateofart.tex
+++ b/2_stateoftheart/stateofart.tex
@@ -4,7 +4,7 @@ This chapter presents an overview on state-of-the-art on neurosymbolic AI, outli
 \section{The Artificial Intelligence Spectrum} \label{sec:the_ai_spectrum}
 %%Referencias a los tipos de modelos y a los modelos hibridos que hay y a los estudios quasifilosoficos sobre por que unos pisan a otros, reemplazan a otros, mejoran a otros, etc.
 
-\begin{figure*}
+\begin{figure*}[t]
     \centering
     \includegraphics[width=.5\linewidth]{2_stateoftheart/figures/Lieberman_taxonomy.eps}
     \caption{AI Spectrum as depicted in \cite{lieberman_symbolic_nodate}}
@@ -13,10 +13,18 @@ This chapter presents an overview on state-of-the-art on neurosymbolic AI, outli
 
 Throughout the years, several categorizations have been proposed for the existing Artificial Intelligence (AI) models, each attending to a specific criterium. \cite{lieberman_symbolic_nodate} categorizes AI models considering their input in two categories: symbolic (also referred to as ``classic AI") and subsymbolic. These two types are disjoint and complimentary to each other. \cite{lieberman_symbolic_nodate} depicts the AI spectrum as a \textit{yin-yang} (Figure \ref{fig:lieberman_tax}), where the flaws of one kind are compensated by the benefits of the other. While this categorization presents a simple and general overview of the existing AI models, it lacks a middle ground where hybrid approaches can be categorized. 
 
-Opposite to this vision, where the focus is on the input, \cite{loyola-gonzalez_black-box_2019} envisions the AI spectrum from the perspective of the output. This taxonomy categorizes AI approaches as \textit{white-box} or \textit{black-box} considering whether the process that lead to a given output can be explained or not. The notation \textit{black-box} is used to describe those models whose inference process cannot be explain, which mainly applies to machine learning models.  \textit{Black-box} models can be subsequently grouped in: hyperplane-based, neural networks, probability-based and instance-based. \textit{White-box} models lie on the opposite side of the spectrum, and relate to those approaches whose inference process can be understood and explained. Decision trees, rule-based systems, or fuzzy logic are encompassed in this category.
+Opposite to this vision, where the focus is on the input, \cite{loyola-gonzalez_black-box_2019} envisions the AI spectrum from the perspective of the output. This taxonomy categorizes AI approaches as \textit{white-box} or \textit{black-box} considering whether the process that lead to a given output can be explained or not. The notation \textit{black-box} is used to describe those models whose inference process cannot be explained, which mainly applies to machine learning models. \textit{Black-box} models can be subsequently grouped in: hyperplane-based, neural networks, probability-based and instance-based. \textit{White-box} models lie on the opposite side of the spectrum, and relate to those approaches whose inference process can be understood and explained. Decision trees, rule-based systems, or fuzzy logic are encompassed in this category.
 
 
-\begin{figure}
+More recently, \cite{corea_ai_2019} proposed a two dimensional categorization of AI technologies. Instead of considering the input or output of the model, this taxonomy focuses on the application domains of each paradigm and its reasoning paradigm. Figure \ref{fig:ai_map} portrays this categorization, where the Y-axis comprises the existing problem domains, while the X-axis encodes the three considered paradigms: symbolic, statistical and subsymbolic. While the taxonomy proposed by \cite{lieberman_symbolic_nodate} only considered the symbolic (blue) and subsymbolic (red) models, \cite{corea_ai_2019} also considers the statistical (purple) models. In \cite{corea_ai_2019}, both statistical and subsymbolic models can be perceived as two categorizations on the subsymbolic models, as defined in \cite{lieberman_symbolic_nodate}. Moreover, finer-grained subcategories can be distinguished inside each of the three main paradigms:
+
+\begin{itemize}
+    \item \textbf{Symbolic models:} The term \textit{symbolic} describes AI paradigms that not only employ symbolic representations as input, but have an inference process that can be understood and explained by humans. Two finer grained types are identified inside this category: logic-based and knowledge-based.
+    \item \textbf{Statistical models:} While the taxonomy proposed by \cite{lieberman_symbolic_nodate} only comprised symbolic and subsymbolic models, which are treated as analogous and complimentary kinds, this taxonomy distinguishes statistical models from purely subsymbolic models. These models employ mathematical tools for reasoning and can be subsequently divided into probabilistic and machine learning models.
+    \item\textbf{Subsymbolic models:} According to this taxonomy, the term \textit{subsymbolic} refers to the absence of previous knowledge needed to function. Embodied intelligence models and search and optimisation models are grouped under this criterion.
+\end{itemize}
+
+\begin{figure}[t]
     \centering
     \includegraphics[width=\linewidth]{2_stateoftheart/figures/AI_Map.eps}
     \caption{Map of AI models combining the taxonomy of \cite{corea_ai_2019} with the taxonomy considered in this thesis. Symbolic, statistical and subsymbolic approaches are colour-coded in blue, purple and red respectively. Knowledge-based and computational intelligent systems are coded in continuous and non-continuous lines, respectively. Dashed lines depict deep learning approaches, while dotted lines depict other computational intelligent approaches.}
@@ -24,14 +32,15 @@ Opposite to this vision, where the focus is on the input, \cite{loyola-gonzalez_
 \end{figure}
 
 
-More recently, \cite{corea_ai_2019} proposed a two dimensional categorization of AI technologies. Instead of considering the input or output of the model, this taxonomy focuses on the application domains of each paradigm and its reasoning paradigm. Figure \ref{fig:ai_map} portrays this categorization, where the Y-axis comprises the existing problem domains, while the X-axis encodes the three considered paradigms: symbolic, statistical and subsymbolic. While the taxonomy proposed by \cite{lieberman_symbolic_nodate} only considered the symbolic (blue) and subsymbolic (red) categories, \cite{corea_ai_2019} also considers the statistical (purple) models as an in-between group between the two complimentary groups. Moreover, finer-grained subcategories can be distinguished inside each of the three main paradigms:
+The previous taxonomies provided categories that were fully disjoint and, therefore, each model belongs exclusively to one of the types. The taxonomy of \cite{corea_ai_2019} enables a higher degree of flexibility, as models can be applied under different problem domains as well as use different reasoning paradigms. Regarding application domains (Y-axis), \cite{corea_ai_2019} defines the five considered problem domains as follows:
 \begin{itemize}
-    \item \textbf{Symbolic models:} The term \textit{symbolic} describes AI paradigms that not only employ symbolic representations as input, but have an inference process that can be understood and explained by humans. Two finer grained types are identified inside this category: logic-based and knowledge-based.
-    \item \textbf{Statistical models:} While the taxonomy proposed by \cite{lieberman_symbolic_nodate} only comprised symbolic and subsymbolic models, which are treated as analogous and complimentary kinds, this taxonomy distinguishes statistical models from purely subsymbolic models. These models employ mathematical tools for reasoning and can be subsequently divided into probabilistic and machine learning models.
-    \item\textbf{Subsymbolic models:} According to this taxonomy, the term \textit{subsymbolic} refers to the absence of previous knowledge needed to function. Embodied intelligence models and search and optimisation models are grouped under this criterion.
+    \item \textbf{Reasoning:} Capability to solve problems.
+    \item \textbf{Knowledge:} Ability to represent and understand the world.
+    \item \textbf{Planning:} Capability of setting and achieving goals.
+    \item \textbf{Communication:} Ability to understand language and communicate.
+    \item \textbf{Perception:} Capacity to transform raw sensorial inputs into usable information.
 \end{itemize}
 
-The previous taxonomies provided categories that were fully disjoint and, therefore, each particular model needed to belong to exclusively one of the types. The taxonomy of \cite{corea_ai_2019} enables a higher degree of flexibility, as models can be applied under different problem domains as well as use different reasoning paradigms.
 %%Taxonomias de la mas antigua a la mas moderna
 \cite{hopgood_2009_knowledge-based} proposed a division of AI paradigms in two main categories: knowledge-based systems and computationally intelligent systems. Knowledge-based systems require explicit representations of knowledge in a symbolic form, while computationally intelligent systems use nature-inspired paradigms where no background knowledge is required to reason. This taxonomy can be merged with the taxonomy of \cite{corea_ai_2019}, providing a three-dimensional taxonomy as depicted in Figure \ref{fig:ai_map}. A third dimension depicts whether the paradigm can be classified as knowledge-based (continuous line) or computationally intelligent (discontinuous line). 
 
@@ -42,10 +51,11 @@ After combining the taxonomies presented in \cite{hopgood_2009_knowledge-based} 
     \item \textbf{Knowledge-Based Systems:} These systems fit almost perfectly the definition previously provided for the symbolic paradigms. Therefore, this category groups all the models that require from background expert knowledge to reason:
     \begin{itemize}
         \item \textit{Inductive Logic Programming (ILP):} This term was first introduced by \cite{Muggleton1991}, describing this field as ``\textit{the area of AI which deals with the induction of hypothesised predicate definitions from examples and background knowledge}". ILP is one of the prime examples of symbolic learning, using fully expressive representations to encode logical clauses and knowledge, making the input, output and the induction process fully explainable.
-        \item \textit{Semantic Reasoners:} Instead of expressing background knowledge by means of logical clauses or predicates as in ILP, semantic reasoners use ontologies to encode background knowledge. Ontologies \citep{noy2001ontology} provide explicit specifications of conceptualizations which are shared and understood between humans and machines. Moreover, ontologies present a formal definition of classes (or types) and the properties and relations between those classes and their instances in a given domain. From the information encoded in an ontology, a semantic reasoner (also referred to as the reasoning engine) can infer new axioms from the existing axioms.
+        \item \textit{Semantic Reasoners:} Instead of expressing background knowledge by means of logical clauses or predicates as in ILP, semantic reasoners use ontologies to encode background knowledge. Ontologies \citep{noy2001ontology} provide explicit specifications of conceptualizations which are shared and understood between humans and machines. Moreover, ontologies present a formal definition of classes (or types) and the properties and relations between those classes and their instances in a given domain. From the information encoded in an ontology, a semantic reasoner (also referred to as the reasoning engine) can infer new axioms from the existing axioms. Similarly, description logics \citep{description_logics} can be also used to describe concepts formally, enabling query-like questions over the data.
+  
         \item \textit{Expert Systems:} Formally, an expert system can be described as an AI system capable of emulating the decision-making process of a human expert of a given domain. These systems are composed by two differentiated parts: an inference engine and a knowledge base. The knowledge base encodes the facts, rules and background information needed. The inference engine applies the rules existing in the knowledge base to the known facts to infer new facts. \textit{Rule Systems} are the cornerstone of expert systems, using if-then clauses to infer new information from the already existing knowledge. As both facts and rules are encoded in a declarative way, the inference process can be fully understood and explained by humans. 
         
-        \textit{Case-Based Reasoning} (CBR) \citep{overview_cbr} is another example of an expert system. In this case, the knowledge base is replaced by a case base, where a set of problem-solution tuples (or cases) are stored. CBR implements a continuous cycle, where the model improves overtime by including the knowledge acquired from the resolution of new problems, whose solutions are then stored in the case base. Therefore, the performance of the model improves overtime. A CBR model is composed of four distinct phases: retrieve, reuse, revise and retain. When a new problem enters the system, the retrieve phase is triggered, returning the most similar existing cases to the introduced one. From the most similar cases, a tailored solution for the input problem is devised in the reuse stage using the already known solutions of the most similar cases. The proposed solution is then revised, determining whether it is suitable for the problem or not. If the solution satisfies the input problem, the newly generated case is stored in the case base, and will serve for the resolution of subsequent problems.   
+        \textit{Case-Based Reasoning} (CBR) \citep{overview_cbr} is another example of an expert system. In this case, the knowledge base is replaced by a case base, where a set of problem-solution tuples (or cases) are stored. CBR implements a continuous cycle, where the model improves overtime by including the knowledge acquired from the resolution of new problems, whose solutions are then stored in the case base. Therefore, the performance of the model improves overtime. A CBR model is composed of four distinct phases: retrieve, reuse, revise and retain. When a new problem enters the system, the retrieve phase is triggered, returning the most similar existing cases to the introduced one. From the most similar cases, a tailored solution for the input problem is devised in the reuse stage using the already known solutions of the most similar cases. The proposed solution is then revised, determining whether it is suitable for the problem or not. If the solution satisfies the input problem, the newly generated case is retained in the case base, and will serve for the resolution of subsequent problems.   
     \end{itemize}
     \item \textbf{Computational Intelligence:} Following the taxonomy from \cite{hopgood_2009_knowledge-based}, computational intelligence models cover both statistical and subsymbolic paradigms. The remaining of the computational intelligence spectrum according to the proposed categorization comprises the following models:
     \begin{itemize}
@@ -71,7 +81,7 @@ After combining the taxonomies presented in \cite{hopgood_2009_knowledge-based} 
 
 % \section{Design Methods for Hybrid Learning Systems}
 \section{Neurosymbolic Systems} \label{sec:sota_neurosymbolic_systems}
-\textit{Neurosymbolic} (or hybrid learning) AI describes a set of proposed methods designed to integrate analogous AI models, generating new approaches that combine the benefits of both models under a unified framework. As \cite{valiant_three_2003} claimed: ``\textit{The aim is to identify a way of looking at and manipulating commonsense knowledge that is consistent with and can support what we consider to be the two most fundamental aspects of intelligent cognitive behaviour: the ability to learn from experience and the ability to reason from what has been learned"}. Several efforts have been conducted on this direction, proposing strategies, categorizations, and studying the limitations of this integration. 
+\textit{Neurosymbolic} (or hybrid learning) AI describes a set of methods designed to integrate analogous AI models, generating new approaches that combine the benefits of both models under a unified approach. As \cite{valiant_three_2003} claimed: ``\textit{The aim is to identify a way of looking at and manipulating commonsense knowledge that is consistent with and can support what we consider to be the two most fundamental aspects of intelligent cognitive behaviour: the ability to learn from experience and the ability to reason from what has been learned"}. Several efforts have been conducted on this direction, proposing strategies, categorizations, and studying the limitations of this integration. 
 
 \subsection{Motivation}\label{2_sec:subsec:motivation}
 %%Papers referentes a por qué, limitaciones, etc. Aquí va el paper de sensors
@@ -127,9 +137,9 @@ A systematic review was conducted in the context of ambient intelligence to furt
 
 Background knowledge was mostly extracted from three sources: data provided by users, previously existing KBs, and sensor data, being the latest the most prominent one. Regarding the role of the KB, it varies greatly across the different subdomains. In the health, mobility, risk and resource management and housing domains, the KB is built with the purpose of subsequently feeding a predictive model, doting it with background knowledge and enhancing its reasoning capabilities. This statement does not hold in the government and education domains, where the KB plays the primary role instead of serving as a secondary element.
 
-The following metrics (which relate to the expected features of neurosymbolic systems) were evaluated to study the different proposals in which the KB is integrated within the predictive model: scalability, interpretability, generalization ability, resource consumption, and relevance of the knowledge base to the predicting process. Table \ref{tab:sensors_reasoning} summarizes the findings of this study. Despite the heterogeneity between proposals, it is worth noticing that the majority of the employed paradigms are symbolic (green highlighted rows), thus scoring high in interpretability (M2). In the work of \cite{olszewskiturek} a neural network is also evaluated on the task, outperforming other approaches. The authors, however, decide on a decision tree as their final model, stating that even when its performance was subpar with respect to the neural network, they preferred to employ a model that was interpretable. This decision is quite remarkable, as it clearly showcases one of the biggest breaches between symbolic and subsymbolic models: the lack of explainability. 
+The following metrics (which relate to the expected features of neurosymbolic systems) were evaluated to study the different proposals in which the KB is integrated within the predictive model: scalability, interpretability, generalization ability, resource consumption, and relevance of the knowledge base to the predicting process. Table \ref{tab:sensors_reasoning} summarizes the findings of this study. Despite the heterogeneity between proposals, it is worth noticing that the majority of the employed paradigms are symbolic (green highlighted rows), thus scoring high in interpretability (M2). In the work of \cite{olszewskiturek} a neural network is also evaluated on the task, outperforming other approaches. The authors, however, settle on a decision tree as their final model, stating that even when its performance was subpar with respect to the neural network, they preferred to employ a model that was interpretable. This decision is quite remarkable, as it clearly showcases one of the biggest breaches between symbolic and subsymbolic models: the lack of explainability. 
 
-All proposals used the KB when building the predictive model, thus successfully integrating background knowledge. It is also worth noticing that, for subsymbolic approaches (red coloured rows), there exists a direct relation between scalability (M1) and generalization capability (M3), featuring simultaneously on several resources. This does not apply to purely symbolic models, where these features are ranked either as partial or null. This study served to further evidence the existing chasm between symbolic and subsymbolic approaches, evidencing the necessity of middle-ground solutions that combine the positive features of both types.
+All proposals used the KB when building the predictive model, thus successfully integrating background knowledge. It is also worth noticing that, for subsymbolic approaches (red coloured rows), there exists a direct relation between scalability (M1) and generalization capability (M3), featuring simultaneously on several resources. This does not apply to purely symbolic models, where these features are ranked either as partial or null. This study served to further visibilize the existing chasm between symbolic and subsymbolic approaches, evidencing the need of middle-ground solutions that combine the positive features of both types.
 
 %Después de nuestra referencia, el resto
 
@@ -154,11 +164,11 @@ This idea was further expanded by \cite{bader_dimensions_2005}, which introduced
     \item \textit{Hybridation}, where the symbolic and connectionist modules are interconnected. In this design, connectionist components serve as a supporting element to the main symbolic processor.
 \end{itemize}
 
-With the renewed interest in neurosymbolic computing, new proposals have emerged addressing the newly existing challenges in neurosymbolic computing. \cite{besold_neural-symbolic_2017} enunciated a set of principles for neurosymbolic integration. This work highlights one of the core elements of neurosymbolic models: the distinction between representation and reasoning. Typically, symbolic models play the representation role, while subsymbolic models are used for reasoning. Equal to \cite{bader_dimensions_2005}, \cite{besold_neural-symbolic_2017} envisions neurosymbolic integration like a cycle, comprising the following steps: i) translation of symbolic background knowledge to a subsymbolic representation, ii) training the subsymbolic model to extract general patterns about the data, iii) reason over new data using the subsymbolic model and iv) extract symbolic knowledge from the subsymbolic model. The final step not only provides explanation of the inference process, but facilitates transfer learning over the subsymbolic model.
+With the renewed interest in neurosymbolic computing, new proposals have emerged addressing the newly existing challenges in neurosymbolic computing. \cite{besold_neural-symbolic_2017} enunciated a set of principles for neurosymbolic integration. This work highlights one of the core elements of neurosymbolic models: the distinction between representation and reasoning. Typically, symbolic models play the representation role, while subsymbolic models are used for reasoning. Equal to \cite{bader_dimensions_2005}, \cite{besold_neural-symbolic_2017} envisions neurosymbolic integration like a cycle, comprising the following steps: i) translation of symbolic background knowledge to a subsymbolic representation, ii) training the subsymbolic model to extract general patterns about the data, iii) reason over new data using the subsymbolic model, and iv) extract symbolic knowledge from the subsymbolic model. The final step not only provides explanation of the inference process, but facilitates transfer learning over the subsymbolic model.
 
-\begin{figure}[h]
+\begin{figure}[ht]
     \centering
-    \includegraphics[width=.9\linewidth]{2_stateoftheart/figures/garcez_design.eps}
+    \includegraphics[width=.85\linewidth]{2_stateoftheart/figures/garcez_design.eps}
     \caption{Design dimensions proposed by \cite{garcez_neural-symbolic_2019}}
     \label{fig:garcez_design}
 \end{figure}
@@ -193,16 +203,16 @@ The neurosymbolic classification framework proposed by \cite{medsker2020models} 
     \item \textit{Modular systems} are the most common type, integrating different individual modules (both symbolic and subsymbolic) under a unified framework.
 \end{itemize} 
 
-The categorization by \cite{hilario_overview_nodate} was later updated by \cite{bader_dimensions_2005}, proposing a more robust schema comprising three different dimensions. Instead of considering neurosymbolic integration as linear phenomena, \cite{bader_dimensions_2005} consider this process as a cycle. In this cycle, the symbolic system serves as an input point where expert knowledge can be collected, to be then fed into a connectionist system that can benefit from this background knowledge during the training process. Similarly, the knowledge acquired by the connectionist system after training can be returned to the symbolic system for further usage.
-
-This conception of neurosymbolic integration enables a higher degree of flexibility than the previous categorizations. Subsequently, the categorization proposed by \cite{bader_dimensions_2005} provides a three-dimensional space, where each dimension has different degrees of flexibility. The categorization proposed in \cite{hilario_overview_nodate}, where models range from unified to translational, is treated as just one dimension in this categorization. This dimension is referred to as \textit{interrelation} in this categorization. The second dimension refers to the \textit{language}, which relates to the way in which the knowledge is encoded in the system. The third and final dimension encodes the \textit{usage} of the system.
+The categorization by \cite{hilario_overview_nodate} was later updated by \cite{bader_dimensions_2005}, proposing a more robust schema comprising three different dimensions. Instead of considering neurosymbolic integration as linear phenomena, \cite{bader_dimensions_2005} consider this process as a cycle. This conception of neurosymbolic integration enables a higher degree of flexibility than the previous categorizations. Subsequently, the categorization proposed by \cite{bader_dimensions_2005} provides a three-dimensional space, where each dimension has different degrees of flexibility. The categorization proposed in \cite{hilario_overview_nodate}, where models range from unified to translational, is treated as just one dimension in this categorization. This dimension is referred to as \textit{interrelation} in this categorization. The second dimension refers to the \textit{language}, which relates to the way in which the knowledge is encoded in the system. The third and final dimension encodes the \textit{usage} of the system.
 
 %%Patrones de diseño con boxologia
 \section{Introductory Integration of Deep Learning and Knowledge-Based Systems}  \label{sec:sota_dl_kb_intregration}
 
 As discussed in the previous Section, several strategies can be followed regarding neurosymbolic system design. All these strategies, however, can be grouped in two main trends: introduction and extraction. Introduction approaches aim to combine symbolic and subsymbolic models under a unified framework to perform a certain task. In \cite{van_bekkum_modular_2021} several compositional integrative patterns are described, covering an extended set of tasks. 
 
-Rules and deep learning models is one of the most recurrent combinations in neurosymbolic systems. \cite{hatzilygeroudis_integrated_2010} proposed the concept of the \textit{neurules}, a kind of integrated rules composed by several adaline units. \textit{Neurules} are also capable of successfully integrating external inputs and providing a better generalization. More recently, \cite{daniele_knowledge_2019} proposed Knowledge Enhanced Neural Networks, a neural architecture where prior knowledge is injected in the form of logical clauses. The introduction of rules in the network prevents it from learning contradictory patterns from the training data, making the final system robust to noisy data. This idea is further explored by \cite{roychowdhury_regularizing_2021}, where an architecture-agnostic method is proposed to integrate first-order logic clauses into deep learning models. The inclusion of first-order logic clauses successfully reduces the need of training data required, while simultaneously boosting the final performance of the system. \cite{kursuncu_knowledge_2020} studied a different path, proposing an architecture where knowledge graphs and expert knowledge are integrated within the learning process, alongside with external data. This integration not only enhances the results of the system, but also accelerates its convergence.
+Rules and deep learning models is one of the most recurrent combinations in neurosymbolic systems. \cite{hatzilygeroudis_integrated_2010} proposed the concept of the \textit{neurules}, a kind of integrated rules composed by several adaline units. \textit{Neurules} are also capable of successfully integrating external inputs and providing a better generalization. 
+
+More recently, \cite{daniele_knowledge_2019} proposed Knowledge Enhanced Neural Networks, a neural architecture where prior knowledge is injected in the form of logical clauses. The introduction of rules in the network prevents it from learning contradictory patterns from the training data, making the final system robust to noisy data. This idea is further explored by \cite{roychowdhury_regularizing_2021}, where an architecture-agnostic method is proposed to integrate first-order logic clauses into deep learning models. The inclusion of first-order logic clauses successfully reduces the need of training data required, while simultaneously boosting the final performance of the system. \cite{kursuncu_knowledge_2020} studied a different path, proposing an architecture where knowledge graphs and expert knowledge are integrated within the learning process, alongside with external data. This integration not only enhances the results of the system, but also accelerates its convergence.
 
 \begin{figure}[t!]
     \centering
@@ -265,18 +275,18 @@ More recently, \cite{phillips_explainability_2021} outlined the \textit{four pri
 %%Explainable AI
 Figure \ref{fig:van_bekkum_explain} gives an overview of a general explainability workflow. Two stages can be clearly differentiated in the process: training and deduction phase and explaining phase. The example showcased in Figure \ref{fig:van_bekkum_explain} describes an instance-based explaination model. LIME \citep{ribeiro_lime_2016} and Anchors \citep{Ribeiro_Singh_Guestrin_2018} are examples of such approaches, where the inference process of a single prediction made by a supervised classifier is explained by means of the predictions achieved by a sample of similar inputs. These approaches serve as a cornerstone for newer, more robust, and complex explainability frameworks, such as \cite{arya_one_2019}. 
 
-While most explainability approaches focus on explaining neural network predictions, this trend is further expanded to different areas, such as KGC. Bianchi et al. \citep{bianchi_kge_explainability_2020} provided an study about explainability in KGE models. In the context of knowledge graph embeddings, explainability encompasses any potential information that can accurately relate the prediction provided by the model with both the input data and the final embeddings. Considering this definition, DistMult \citep{distmult} was one of the first proposals that tackled explainability over KGE. In addition to the KGE model proposal, DistMult also provides a method for the generation of Horn clauses from the embeddings. According to the authors, extracting rules from the embeddings serves four purposes: i) deducing new facts, ii) optimizing data storage, iii) support complex reasoning, and iv) provide an explanation for the inference process. Moreover, this work introduced a new perspective on rule mining from KGs: use the embeddings as the source instead of the KG. This approach not only solves one of the main problems of rule mining, which is the optimization of the search space, but also provides a novel data-agnostic vision on the subject. 
+While most explainability approaches focus on explaining neural network predictions, this trend is further expanded to different areas, such as KGC. \cite{bianchi_kge_explainability_2020} provided an study about explainability in KGE models. In the context of knowledge graph embeddings, explainability encompasses any potential information that can accurately relate the prediction provided by the model with both the input data and the final embeddings. Considering this definition, DistMult \citep{distmult} was one of the first proposals that tackled explainability over KGE. In addition to the KGE model proposal, DistMult also provides a method for the generation of Horn clauses from the embeddings. According to the authors, extracting rules from the embeddings serves four purposes: i) deducing new facts, ii) optimizing data storage, iii) support complex reasoning, and iv) provide an explanation for the inference process. Moreover, this work introduced a new perspective on rule mining from KGs: use the embeddings as the source instead of the KG. This approach not only solves one of the main problems of rule mining, which is the optimization of the search space, but also provides a novel data-agnostic vision on the subject. 
 
 As pointed by \cite{bianchi_kge_explainability_2020}, explainability of knowledge graph embedding models remains a challenge. While the inference process of some specific models can be explained using rules, other approaches such as GNNExplainer \citep{ying_2019_gnnexplainer} and CRIAGE \citep{pezeshkpour_2019_investigating} base the explanation on the detection of the top influential elements on the prediction. These approaches follow the same workflow depicted in \ref{fig:van_bekkum_explain}, where instance-based explanations are generated by a module external to the KGE model. 
 
 \section{Conclusions of the State-of-the-Art}
-This chapter first aims to summarize the AI spectrum. Due to the complexity of this task, there is not a unique taxonomy, but several categorizations that stem from different perspectives. One of the simplest categorizations divides the spectrum into two complimentary kinds: symbolic and subsymbolic. This spectrum was further expanded to include an in-between ground: statistical models. A different categorization divides the AI spectrum between knowledge-based and computationally intelligent systems. However, this categorization does not consider deep learning approaches due to their novelty. An integration of both taxonomies including deep learning is presented in this Section, which is used throughout the rest of the document.
+This chapter first aims to summarize the AI spectrum. Due to the complexity of this task, there is not a unique taxonomy, but several categorizations that stem from different perspectives. One of the simplest categorizations divides the spectrum into two complimentary kinds: symbolic and subsymbolic. This spectrum was further expanded to include an in-between ground: statistical models. A different categorization divides the AI spectrum between knowledge-based and computationally intelligent systems. However, this categorization does not consider deep learning approaches due to their novelty. An integration of both taxonomies including deep learning is presented in this Section, which is used throughout the rest of the thesis.
 
 Neurosymbolic models are also studied in this Section, providing an overview on the different categorizations and design patterns. An insight on the motivation of these approaches is also provided, studying the benefits of combining symbolic and subsymbolic models. After conducting a systematic review of neurosymbolic models in the context of ambient intelligence, the following conclusions were drawn:
 \begin{itemize}
     \item Neurosymbolic systems should enable the solution of tasks that can not otherwise be solved by a single model.
     \item The introduction of background knowledge into subsymbolic models enhances the final reasoning capacity of the model.
-    \item Explainable models are preferred to their opaque but accurate counterparts.
+    \item Explainable models are preferred to their opaque counterparts.
     \item There exists a complimentarity between the benefits and flaws of symbolic and subsymbolic models, i.e.: lack of scalability or limited abstraction capacity.
 \end{itemize}
 
