--- a/5_dlintegrationkbs/dlintegrationkbs.tex
+++ b/5_dlintegrationkbs/dlintegrationkbs.tex
@@ -1,7 +1,7 @@
 \chapter{Deep Learning Introduction into Knowledge-Based Systems}
 \label{chap:dlintegrationkbs} 
 
-This chapter\footnote{This chapter is based on the work: Amador-Domínguez, E., Serrano, E., Manrique, D., and Bajo, J. (2021). A Case-Based Reasoning Model Powered by Deep Learning for Radiology Report Recommendation. Int. J. Interact. Multim. Artif. Intell., 7(2), 15. doi:10.9781/ijimai.2021.08.011} presents the second insertion integration between deep learning models and knowledge-based systems. Section \ref{5_sec:dl_intro_kbs_methodology} presents the method parameters for the insertion of deep learning models in a knowledge-based system. This insertion method is instantiated into a hybrid framework, combining a case-based reasoning (CBR) model with different deep learning modules. Section \ref{5_sec:dl_powered_kbs_medical} outlines the main features of the proposed framework, focusing on its application in the medical domain. In this context, a CBR powered by DL modules for the generation of medical reports is presented. This scenario showcases the benefits of the introduction of DL into a CBR model, such as enabling reasoning over complex data (i.e., textual reports and images) or enhanced scalability. Section \ref{5_sec:raidologist} instantiates the proposed framework in its use for radiological report generation. Section \ref{5_sec:experimental_results} presents the experimental results. The compliance of the case scenario regarding the general design method is outlined in Section \ref{5_sec:design_compliance}. The chapter is summarized in Section \ref{5_sec:summary}. 
+This chapter\footnote{This chapter is based on the work: Amador-Domínguez, E., Serrano, E., Manrique, D., and Bajo, J. (2021). A Case-Based Reasoning Model Powered by Deep Learning for Radiology Report Recommendation. Int. J. Interact. Multim. Artif. Intell., 7(2), 15. doi:10.9781/ijimai.2021.08.011} presents the second insertion integration between deep learning models and knowledge-based systems. Section \ref{5_sec:dl_intro_kbs_methodology} presents the method parameters for the insertion of deep learning models in a knowledge-based system. This insertion method is instantiated into a hybrid framework, combining a case-based reasoning (CBR) model with different deep learning (DL) modules. Section \ref{5_sec:dl_powered_kbs_medical} outlines the main features of the proposed framework, focusing on its application in the medical domain. In this context, a CBR powered by DL modules for the generation of medical reports is presented. This scenario showcases the benefits of the introduction of DL into a CBR model, such as enabling reasoning over complex data (i.e., textual reports and images) or enhanced scalability. Section \ref{5_sec:raidologist} instantiates the proposed framework in its use for radiological report generation. Section \ref{5_sec:experimental_results} presents the experimental results. The compliance of the case scenario regarding the general design method is outlined in Section \ref{5_sec:design_compliance}. The chapter is summarized in Section \ref{5_sec:summary}. 
 
 
 \section{Deep Learning Insertion in Knowledge-Based Systems}\label{5_sec:dl_intro_kbs_methodology}
@@ -32,7 +32,7 @@ Desing parameters per dimension for the introduction of DL into KBS are outlined
 \begin{enumerate} [start=1,label={\bfseries R\arabic*.}]
     \item \textbf{Performance must increase.} \label{dlinstrokbs_R_performance} The inclusion of DL in a KBS carries an computational cost. Therefore, the resulting hybrid approach is expected to show a performance improvement with respect to the baseline KBS for the integration to be cost-effective. 
     
-    \item \textbf{User input affects the behaviour of the model.}\label{dlintrokbs_R_user} User input is indispensable for KBS models (\ref{dl_intro_kbs_L_human}). While it can be perceived as limiting, it ensures the correct behaviour of the KBS. The impact that external input has on the behaviour of the system should remain with the introduction of DL, correcting not only the behaviour of the KBS but also of the DL.
+    \item \textbf{User input affects the behaviour of the model.}\label{dlintrokbs_R_user} User input is indispensable for KBS models (\ref{dl_intro_kbs_L_human}). While it can be perceived as limiting, it ensures the correct behaviour of the KBS. The impact that external input has on the behaviour of the system should remain with the introduction of DL, correcting not only the behaviour of the KBS but also of the DL model.
     
     \item \textbf{Interpretability does not decrease.}\label{dlintrokbs_LR_interpretability} One of the main assets of KBS is their high interpretability. KBS are designed to both integrate external input and produce outputs whose inference process can be understood by humans. DL models, on the contrary, behave as black-boxes. Therefore, their integration should be performed in a way that does not obscure the inference process, so that it can still be understandable.
     
@@ -69,7 +69,7 @@ While similarity between reports can be measured according to quantitative metri
 \begin{itemize}
     \item I1. \textit{Image Comparison.} Images are the cornerstone of some medical areas, such as neurology or dermatology. In those fields where pictures provide essential information, they should not be diluted within the text, but treated separately. Several methods for image comparison can be considered, ranging from histogram to feature vector comparison. Convolutional Neural Networks (CNNs) are a potential DL option for this indicator. CNNs are possibly the most robust way to translate images into a fixed-dimensional space. However, simpler, non-DL alternatives can be also applied. Feature matching algorithms, such as SURF \citep{image_surf}, ORB \citep{ORB_image} or KAZE \citep{KAZE_images} are potential interpretable alternatives to CNNs. However, feature matching algorithms are highly sensitive to potential image failures, such as light flashing, and cannot capture finer-grained information. A potential solution for this issue is to combine differently generated vector representations into a unique vector. Once the image is embedded into a single vector, distance-based can be performed to measure the similarity with respect to the existing images.
     
-    \item I2. \textit{Document Comparison.} Similar to the previous case, multiple approaches can be considered for document comparison. Non-feature-based methods can perform this task, but their performance is noticeably subpar with respect to that where documents are embedded into a vector space and can be compared using distance-based metrics. Language models such as ELMO (Embeddings for Language Models) \citep{elmo} or BERT (Bidirectional Encoder Representations for Transformers) \citep{bert} are the preferred choices for document embedding, but simpler methods such as bag-of-words or TF-IDF can also be applied. Despite reducing the computational cost, these methods cannot capture the underlying semantic information, which leads to less expressive representations. Regarding embedding comparison, different paradigms can be considered, depending both on the type of documents to compare and their purpose. In this respect, cosine similarity, word's mover distance \citep{word_mover_distance}, or probabilistic based methods (in which the embedding is converted into a probabilistic distribution) are suitable choices.
+    \item I2. \textit{Document Comparison.} Similar to the previous case, multiple approaches can be considered for document comparison. Non-feature-based methods can perform this task, but their performance is noticeably subpar with respect to that where documents are embedded into a vector space and can be compared using distance-based metrics. Language models such as ELMo (Embeddings for Language Models) \citep{elmo} or BERT (Bidirectional Encoder Representations for Transformers) \citep{bert} are the preferred choices for document embedding, but simpler methods such as bag-of-words or TF-IDF can also be applied. Despite reducing the computational cost, these methods cannot capture the underlying semantic information, which leads to less expressive representations. Regarding embedding comparison, different paradigms can be considered, depending both on the type of documents to compare and their purpose. In this respect, cosine similarity, word's mover distance \citep{word_mover_distance}, or probabilistic based methods (in which the embedding is converted into a probabilistic distribution) are suitable choices.
     
     \item I3. \textit{Named Entity Comparison.} Named Entity Recognition (NER) is one of the key tasks in the Natural Language Processing area, being particularly relevant in the medical domain. The goal of this task is to detect and label relevant terms within the text, such as people, places, or dates. Its use is particularly extended in the medical domain, where several NER models have been developed to identify specific medical terms within texts such as diseases, proteins or drugs. CliNER \cite{cliner}, BioBERT \citep{biobert} or SciBERT \citep{scibert} are examples of clinical NER models. Annotating relevant terms within documents can be an effective tool to detect and retrieve related documents. Therefore, only those cases whose reports contain relevant terms are considered for retrieval, greatly reducing the search scope.
     
@@ -123,11 +123,11 @@ In the revise stage, a panel of experts manually checks the upcoming cases, rati
 \subsection*{Retain}\label{5_sec:dl_powered_cbr_retain}
 One of the main challenges of CBR systems is how to efficiently manage the case base. Ideally, the case base should be optimized, containing the minimum number of relevant cases that ensure the maximum coverage. Non-valid cases are not stored in the case base, but are stored separately to serve as negative samples for the scoring module. 
 
-New cases are being regularly introduced into the case base, subsequently unchaining a reaction within the system. CBR models improve with the inclusion of new cases, which keeps them usable and updated throughout time. In the retain stage of the cycle, besides performing case base maintenance, reuse models are updated and checked. Reuse model updates can be either a replacement for the modules, such as switching from regular expression or rule-based systems (when the number of cases is limited) to DL models when the available data increases. 
+New cases are being regularly introduced into the case base, subsequently unchaining a reaction within the system. CBR models improve with the inclusion of new cases, which keeps them usable and updated throughout time. In the retain stage of the cycle, besides performing case base maintenance, reuse models are updated and checked. Reuse model updates can be either a replacement for the modules, such as switching from regular expression or rule-based systems (e.g., when the number of cases is limited) to DL models when the available data increases. 
 
 \subsection{A Hybrid Case-Based Reasoning and Deep Learning Framework for Radiological Report Recommendation}\label{5_sec:raidologist}
 
-This Section presents an implementation of the general framework depicted in Figure \ref{fig:overview_CBR_DL} focusing specifically on radiological reports. This context presents a challenging scenario, as both image and textual information are equally relevant. Figure \ref{fig:raidologist_data_flow} showcases the data flow of the implementation, instantiating the different components described in Section \ref{5_sec:dl_powered_kbs_medical}. The execution steps of one full iteration of the cycle are also denoted.
+This Section presents an implementation of the general framework depicted in Figure \ref{fig:overview_CBR_DL} focusing specifically on radiological reports. This context presents a challenging scenario, as both image and textual information are equally relevant. Figure \ref{fig:raidologist_data_flow} showcases the data flow of the implementation, instantiating the different components described in Section \ref{5_sec:dl_powered_kbs_medical}. The execution steps of one complete iteration of the cycle are also denoted.
 
 \begin{figure}[t]
     \centering
@@ -136,7 +136,7 @@ This Section presents an implementation of the general framework depicted in Fig
     \label{fig:raidologist_data_flow}
 \end{figure}
 
-The framework is implemented as a four-layered software architecture. Some issues must be addressed before defining the specific components of the proposed hybrid model for the given task, such as data management or storage mechanisms. Indexed storage is employed to deal to efficiently manage the constant growth of the case base while still allowing for efficient retrieval. In the proposed storage, cases are saved either in a distributed or centralized schema and referenced in an index file. The index file contains each case's location and its respective indicators which are computed beforehand, accelerating the retrieval process. 
+The framework is implemented as a four-layered software architecture. Some issues must be addressed before defining the specific components of the proposed hybrid model for the given task, such as data management or storage mechanisms. Indexed storage is employed to efficiently manage the constant growth of the case base while still allowing for efficient retrieval. In the proposed storage, cases are saved either in a distributed or centralized schema and referenced in an index file. The index file contains each case's location and its respective indicators which are computed beforehand to accelerate the retrieval process. 
 
 In the radiology domain, a case is usually composed by one or more radiographs and a brief text summarizing the most relevant findings on the images, alongside additional information about the patient. These are the two minimal elements required to define a case, but additional information can be provided, such as relevant terms, regions of interest, or specific abbreviations. 
 
@@ -149,7 +149,7 @@ The retrieve stage begins when the user inputs a new problem into the system. Th
     
     \item I3. \textit{Named Entity Recognition} CliNER is used to compute this indicator. CliNER provides a series of models (Bi-Directional Long Short Term Memory networks) trained over a sizeable clinical corpus, capable of identifying the following entity categories: diseases, treatments, and tests. While simple, this categorization is enough to cover the terms identified in the radiology domain.
     
-    \item I4. \textit{Noise Filtering.} The same NLP model from I2 is used for noise filtering. In this context, noise encompasses those tokens in the text that cannot be identified as words. Once the report is processed by the NLP model, a set of conflicting terms is obtained. Noise can then be computed as the proportion of identified tokens with respect to the total number of tokens in the text.
+    \item I4. \textit{Noise Filtering.} The same NLP model used in I2 is used for noise filtering. In this context, noise encompasses those tokens in the text that cannot be identified as words. Once the report is processed by the NLP model, a set of conflicting terms is obtained. Noise can then be computed as the proportion of identified tokens with respect to the total number of tokens in the text.
 \end{itemize}
 
 These indicators are computed only once per case. The user is then inquired for the retrieval query parameters: threshold values of each indicator, the combination paradigm (conjunctive or disjunctive), and the number of cases $k$ to retrieve. The threshold values are reformulated in a human-readable format, as depicted in Figure \ref{fig:raidologist_data_flow}. For example, a valid inquiry for the value of I2 (report comparison) would be: \textit{what is the minimum similarity acceptable between the current and the existing reports?}. Queries must be clearly presented and understandable to the user, as they condition the behaviour of the model during the retrieve phase.
@@ -189,9 +189,9 @@ Since the implementation context (radiological domain) is highly expert-oriented
 Figure \ref{fig:overview_experimentation_raidologist} depicts the four steps of the evaluation process:
 
 \begin{enumerate}
-    \item \textit{Initial case base generation.} The case base is the core of any CBR model. In the first step, a set of medical reports is converted into cases, generating the initial case base. Out of all the available medical reports, a sub-sample is selected for later testing. Reports selected for testing are not included in the case base. Each training medical report is then stripped, whenever possible, from its sections to generate the case problem. If a list of named entities or abbreviations is provided alongside the report, these are also included alongside the report in the problem case. If there are radiographs attached to the images, they are included in the case problem as well. The solution to the case is the original medical report. The remaining case solution elements are generated in the following step.
+    \item \textit{Initial case base generation.} The case base is the core of any CBR model. In the first step, a set of medical reports is converted into cases, generating the initial case base. A sub-sample is selected for later testing out of all the available medical reports. Reports selected for testing are not included in the case base. Each training medical report is then stripped, whenever possible, from its sections to generate the case problem. If a list of named entities or abbreviations is provided alongside the report, these are also included alongside the report in the problem case. If there are radiographs attached to the images, they are included in the case problem as well. The solution to the case is the original medical report. The remaining case solution elements are generated in the following step.
     
-    \item \textit{Sectioning and scoring model training.} At this stage, cases contained in the case base are not complete, as they only contain the input problem and one element of the solution (the sectioned report). However, the original and corrupted version of the report are enough to properly train both the sectioning and scoring models. Cases contained in the case base are divided following a 80/20 proportion into two sets: training and validation. The same scoring and sectioning models described in Section \ref{5_sec:raidologist} are used in the evaluation. The sectioning model is trained using case solutions, where each report is split into sentences, and each sentence is labelled according to the section where it was featured. In the scoring model, both the problem and solution of the case are required, as this model feeds positive and negative samples. Case problems comprise the negative sample set, while case solutions are used for its positive counterpart. Section removal and sentence shuffling are also applied for further corruption. Once both sectioning and scoring models are trained, the scoring model is used to update the validation score of each case on the case base. Named entities, disambiguations and related cases are also updated as described in Section \ref{5_sec:raidologist}.
+    \item \textit{Sectioning and scoring model training.} At this stage, cases contained in the case base are not complete, as they only contain the input problem and one element of the solution (the sectioned report). However, the original and corrupted version of the report are enough to properly train both the sectioning and scoring models. Cases contained in the case base are divided following a 80/20 proportion into two sets: training and validation. The same scoring and sectioning models described in Section \ref{5_sec:raidologist} are used in the evaluation. The sectioning model is trained using case solutions, where each report is split into sentences, and each sentence is labelled according to the section where it is featured. In the scoring model, both the problem and solution of the case are required, as this model feeds positive and negative samples. Case problems comprise the negative sample set, while case solutions are used for its positive counterpart. Section removal and sentence shuffling are also applied for further corruption. Once both sectioning and scoring models are trained, the scoring model is used to update the validation score of each case on the case base. Named entities, disambiguations and related cases are also updated as described in Section \ref{5_sec:raidologist}.
     
     \item \textit{Test set generation.} Test cases are created from the medical reports sampled for this purpose in Step 1. In the devised evaluation, the effectiveness of the model is computed based on whether, given a corrupted version of the original report, the framework is capable of providing suggestions and corrections whose application leads to a version as similar to the original report as possible. For each element in the test set, the following corruption operations are performed to create the case problems: section removal, named entity replacement by escape characters and sentence shuffling.
     
@@ -239,7 +239,7 @@ As shown in Figure \ref{fig:optimal_set_comparison}, optimizing the case base po
 \end{figure}
 
 
-Levenshtein distance \citep{levenshtein} between each original and corrected report pair is also computed. Different text similarity metrics could be considered for evaluation, such as cosine similarity or Jaccard index. However, none of these metrics consider sentence ordering. As described in Figure \ref{fig:overview_experimentation_raidologist}, test cases are generated by stripping sections, permutating sentence order, and removing named entities. Therefore, even after the corruption process, both the original and corrupted versions of the report are almost equal in terms of content. An order-sensitive metric is required to ascertain the similarity degree between the original and the corrected report. Figure \ref{fig:levenshtein_comparison} reports the Levenshtein distance for each original and corrected report pair on each dataset and case base. Levenshtein distances in ECGEN (Figure \ref{fig:ecgen_levenshtein}) remain reasonably similar in both the 50-case and optimal bases between cases. Similarly, in MIMIC-CXR (Figure \ref{fig:mimic_levenshtein}) the distance between original and corrected reports remains akin. Case based optimization does not induce an additional improvement, as in the validation evaluation. This issue may be alleviated by the introduction of user input. For the evaluation, both the problem and the solution of the cases have been artificially generated. User-corrected reports may be more expressive and richer in content, enabling the identification of more complex correction patterns.
+Levenshtein distance \citep{levenshtein} between each original and corrected report pair is also computed. Different text similarity metrics could be considered for evaluation, such as cosine similarity or Jaccard index. However, none of these metrics consider sentence ordering. As described in Figure \ref{fig:overview_experimentation_raidologist}, test cases are generated by stripping sections, permutating sentence order, and removing named entities. Therefore, even after the corruption process, both the original and corrupted versions of the report are almost equal in terms of content. An order-sensitive metric is required to ascertain the similarity degree between the original and the corrected report. Figure \ref{fig:levenshtein_comparison} reports the Levenshtein distance for each original and corrected report pair on each dataset and case base. Levenshtein distances in ECGEN (Figure \ref{fig:ecgen_levenshtein}) remain reasonably similar in both the 50-case and optimal bases between cases. Similarly, in MIMIC-CXR (Figure \ref{fig:mimic_levenshtein}) the distance between the original and corrected reports remains akin. Case base optimization does not induce an additional improvement, as in the validation evaluation. This issue may be alleviated by the introduction of user input. For the evaluation, both the problem and the solution of the cases have been artificially generated. User-corrected reports may be more expressive and richer in content, enabling the identification of more complex correction patterns.
 
 \begin{figure}[t!]
     \centering
@@ -252,12 +252,12 @@ Levenshtein distance \citep{levenshtein} between each original and corrected rep
 Figure \ref{fig:entities_comparison} depicts the number of named entities correctly suggested by the framework. In Step 3 of the evaluation, named entities detected in the original report were replaced by escape characters as part of the corruption process. Figures \ref{fig:ecgen_entities} and \ref{fig:mimic_entities} depict the proportion of named entities stripped from the original report and correctly suggested by the system in ECGEN and MIMIC-CXR, respectively. As evidenced by the results, case base optimization induces an improvement in the number of correctly suggested entities. This phenomenon is clearly observed in ECGEN's results (Figure \ref{fig:ecgen_entities}). Only in three cases, the number of detected entities slightly decreases after case base optimization, but significantly improves in four other cases. In MIMIC-CXR (Figure \ref{fig:mimic_entities}), the result is not as consistent as in the previous dataset, which could be due to the difference in the size of the optimized case base between the two datasets. MIMIC-CXR has double the number of cases in its optimized version that ECGEN. Named entities are suggested based on the top $k$ similar cases. Hence, if the retrieved similar cases contain few named entities, it directly impacts the number of suggestions provided by the system. Increasing the value of $k$ in the retrieval could potentially correct this issue.
 
 \subsection{Design Compliance}\label{5_sec:design_compliance}
-A case-based reasoning model comprising several boosting DL modules instantiates the insertion proposal in Section \ref{5_sec:dl_intro_kbs_methodology}. Figure \ref{fig:compliance_dl_into_kbs} denotes the specific method design parameters of the proposed framework, which are described as follows:
+A case-based reasoning model comprising several boosting DL modules instantiates the insertion proposal in Section \ref{5_sec:dl_intro_kbs_methodology}. Figure \ref{fig:compliance_dl_into_kbs} denotes the specific method design parameters of the proposed framework and their correspondences to the interaction design method, which are described as follows:
 
 \begin{figure}[t]
     \centering
     \includegraphics[width=\linewidth]{5_dlintegrationkbs/figures/Instance_DL_intro_KBS.eps}
-    \caption{Overview of the design parameters of the introduction of DL models into a CBR framework. In bold, the general design parameters as depicted in \ref{fig:overview_dl_kbs_intro}.}
+    \caption{Overview of the design parameters of the introduction of DL models into a CBR framework. In bold, the interaction design parameters as depicted in \ref{fig:overview_dl_kbs_intro}.}
     \label{fig:compliance_dl_into_kbs}
 \end{figure}
 
@@ -300,6 +300,6 @@ A case-based reasoning model comprising several boosting DL modules instantiates
 \end{itemize}
 
 \section{Summary}\label{5_sec:summary}
-Contributions \textbf{C2} and \textbf{C5} are presented in this chapter. Contribution \textbf{C2: design method for the insertion of deep learning into knowledge-based systems} is outlined in Section \ref{5_sec:dl_intro_kbs_methodology}. Existing limitations within KBS are identified and outlined in the design, such as its high reliance on human intervention and its limited abstraction capacity and scalability. Considerations regarding technical and contextual aspects of the integration, as well as the specific restrictions that must be met by the resulting system (e.g., interpretability must be preserved). The benefits derived from this integration are also highlighted by the design (e.g., enhanced inference capacity, improved scalability). Objective \textbf{O1: define a set of general parameters per dimension for each integration of knowledge-based systems and deep learning models} is fulfilled again from this contribution.
+Contributions \textit{C3} and \textit{C6} are presented in this chapter. Contribution \textit{C3: design method for the insertion of deep learning into knowledge-based systems} is outlined in Section \ref{5_sec:dl_intro_kbs_methodology}. Existing limitations within KBS are identified and outlined in the design, such as its high reliance on human intervention and its limited abstraction capacity and scalability. Considerations regarding technical and contextual aspects of the integration, as well as the specific restrictions that must be met by the resulting system (e.g., interpretability must be preserved). The benefits derived from this integration are also highlighted by the design (e.g., enhanced inference capacity, improved scalability). Objective \textit{O1: define a set of general parameters per dimension for each integration of knowledge-based systems and deep learning models} is fulfilled again from this contribution.
 
-A KBS-dominated field is selected for the instantiation of this design. Medical document generation poses a quaint task, as it combines the need for a KBS, due to its interpretability and user input integration, but can greatly benefit from the inclusion of a deep learning model. Section \ref{5_sec:dl_powered_kbs_medical} presents the proposed instantiation of the design, which also serves as a contribution of this thesis \textbf{C5: a modular case-based reasoning framework powered by deep learning models for medical document generation.} The proposed framework combines a case-based reasoning model with several deep learning modules, improving the inference capacity of the system while reducing the need for human intervention. A version of the framework for its application on radiology report generation is provided, named r.AID.ologist. Nonetheless, the proposed framework is fully modular and can be easily adapted to fit a wide variety of documents and domains. Moreover, the framework is fully compliant with the proposed design, thus enabling the conformance with objective \textbf{O3: assessing the compliance of each implementation with respect to the general design parameters.}
+A KBS-dominated field is selected for the instantiation of this design. Medical document generation poses a quaint task, as it requires a KBS due to its interpretability and user input integration, but can greatly benefit from the inclusion of DL. Section \ref{5_sec:dl_powered_kbs_medical} presents the proposed instantiation of the integration design, which also serves as a contribution of this thesis \textit{C6: a modular case-based reasoning framework powered by deep learning models for medical document generation.} The proposed framework combines a case-based reasoning model with several deep learning modules, improving the inference capacity of the system while reducing the need for human intervention. A version of the framework for its application on radiology report generation is provided, named r.AID.ologist. Nonetheless, the proposed framework is fully modular and can be easily adapted to fit a wide variety of documents and domains. Moreover, the framework is fully compliant with the proposed design, thus enabling the conformance with objective \textit{O3: assessing the compliance of each implementation with respect to the general design parameters.}
