--- a/Thesis.tex
+++ b/Thesis.tex
@@ -87,7 +87,7 @@
 
 %\renewcommand{\submittedtext}{change the default text here if needed}
 \degree{Philosophi\ae Doctor (PhD), DPhil,..}
-\degreedate{May, 2022}
+\degreedate{June, 2022}
 
 
 % ----------------------------------------------------------------------
@@ -458,28 +458,28 @@ decorations.pathreplacing, shapes.symbols}
 
 
 \noindent Tribunal nombrado por el Sr. Rector Magfco. de la Universidad Polit\'{e}cnica de
-Madrid, el d\'{i}a XXX de Junio de XXXXX. %\mynote{DD de YYYY de 2015}
+Madrid, el d\'{i}a XX de MM de AAAA. %\mynote{DD de YYYY de 2015}
 
 \vspace{10mm}
-Presidente:\hspace{0.3mm} Dr. Presidente Presidente Presidente
+Presidente:\hspace{0.3mm} PRESIDENTE PRESIDENTE PRESIDENTE
 
 \vspace{5mm}
-Vocal: \hspace{6.7mm} Dr. Vocal Vocal Vocal 
+Vocal: \hspace{6.7mm} VOCAL1 VOCAL1 VOCAL1
 
 \vspace{5mm}
-Vocal: \hspace{6.7mm} Dr. Vocal2 Vocal2 Vocal2
+Vocal: \hspace{6.7mm} VOCAL2 VOCAL2 VOCAL2
 
 \vspace{5mm}
-Vocal: \hspace{6.7mm} Dr. Vocal3 Vocal3 Vocal3
+Vocal: \hspace{6.7mm} VOCAL3 VOCAL3 VOCAL3
 
 \vspace{5mm}
-Secretario:\hspace{0.67mm} Dr. Secretario Secretario Secretario
+Secretario:\hspace{0.67mm} SECRETARIO SECRETARIO SECRETARIO
 
 \vspace{5mm}
-Suplente: \hspace{1.5mm} Dr. Suplente Suplente Suplente   
+Suplente: \hspace{1.5mm} SUMPLENTE1 SUPLENTE1 SUPLENTE1   
 
 \vspace{5mm}
-Suplente: \hspace{1.5mm} Dr. Suplente2 Suplente2 Suplente2
+Suplente: \hspace{1.5mm} SUPLENTE2 SUPLENTE2 SUPLENTE2
 
 \vspace{10mm}
 \noindent Realizado el acto de defensa y lectura de la Tesis el d\'{i}a XX de MMMMM de YYYY en la Escuela T\'ecnica Superior de Ingenieros Inform\'aticos
