--- a/0_frontmatter/dedication.tex
+++ b/0_frontmatter/dedication.tex
@@ -2,7 +2,7 @@
 
 \begin{dedication} %this creates the heading for the dedication page
 \begin{flushright}
-%\textit{A mi estrella.}
+\textit{A mi padre. \\Se hace largo el camino sin ti.}
 \end{flushright}
 
 
